# final3

./: .coverage  .gitignore  README.md  funcs.py  main.py  pyproject.toml
src/: funcs.py  main.py
tests/: test_funcs.py
